--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "react-dom": "19.1.0",
     "react-error-boundary": "^6.0.0",
     "react-use-measure": "^2.1.7",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "use-scramble": "^2.2.15"
+    "use-scramble": "^2.2.15",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
