--- a/package.json
+++ b/package.json
@@ -13,43 +13,45 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^6.14.0",
+    "@prisma/client": "^6.16.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "big.js": "^7.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "lucide-react": "^0.539.0",
+    "lucide-react": "^0.543.0",
     "motion": "^12.23.12",
-    "next": "15.4.6",
+    "next": "15.5.3",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-error-boundary": "^6.0.0",
     "react-use-measure": "^2.1.7",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "use-scramble": "^2.2.15",
-    "zod": "^4.0.17"
+    "zod": "^4.1.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/big.js": "^6.2.2",
+    "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.4.6",
+    "eslint-config-next": "15.5.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-unused-imports": "^4.1.4",
+    "eslint-plugin-unused-imports": "^4.2.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "prisma": "^6.14.0",
+    "prisma": "^6.16.0",
     "tailwindcss": "^4",
-    "tsx": "^4.20.4",
-    "tw-animate-css": "^1.3.6",
+    "tsx": "^4.20.5",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   }
 }
