--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^6.16.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
@@ -28,6 +29,7 @@
     "next": "15.5.3",
     "next-themes": "^0.4.6",
     "react": "19.1.1",
+    "react-day-picker": "^9.9.0",
     "react-dom": "19.1.1",
     "react-error-boundary": "^6.0.0",
     "react-use-measure": "^2.1.7",
