--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^6.16.0",
+    "@lucia-auth/adapter-prisma": "^4.0.1",
+    "@node-rs/argon2": "^2.0.2",
+    "@prisma/client": "^6.16.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
@@ -25,7 +27,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "lucide-react": "^0.543.0",
+    "lucia": "^3.2.2",
+    "lucide-react": "^0.544.0",
     "motion": "^12.23.12",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
@@ -37,7 +40,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "use-scramble": "^2.2.15",
-    "zod": "^4.1.7"
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -51,7 +54,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.2.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "prisma": "^6.16.0",
+    "prisma": "^6.16.1",
     "tailwindcss": "^4",
     "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.8",
