--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "type": "tsc --noEmit",
     "postinstall": "prisma generate",
     "seed": "tsx prisma/seed.ts"
@@ -53,6 +55,7 @@
     "eslint-config-next": "15.5.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.2.0",
+    "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "prisma": "^6.16.1",
     "tailwindcss": "^4",
