--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "start": "next start",
+    "start": "next build && next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "format": "prettier --write .",
@@ -34,6 +34,7 @@
     "motion": "^12.23.12",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.9.17",
     "oslo": "^1.2.1",
     "react": "19.1.1",
     "react-day-picker": "^9.9.0",
