--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
   "dependencies": {
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@node-rs/argon2": "^2.0.2",
-    "@prisma/client": "^6.16.1",
+    "@prisma/client": "^6.16.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "big.js": "^7.0.1",
     "class-variance-authority": "^0.7.1",
@@ -31,13 +33,14 @@
     "date-fns": "^4.1.0",
     "lucia": "^3.2.2",
     "lucide-react": "^0.544.0",
-    "motion": "^12.23.12",
+    "motion": "^12.23.13",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
     "oslo": "^1.2.1",
+    "query-string": "^9.3.0",
     "react": "19.1.1",
-    "react-day-picker": "^9.9.0",
+    "react-day-picker": "^9.10.0",
     "react-dom": "19.1.1",
     "react-error-boundary": "^6.0.0",
     "react-use-measure": "^2.1.7",
@@ -59,7 +62,7 @@
     "eslint-plugin-unused-imports": "^4.2.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "prisma": "^6.16.1",
+    "prisma": "^6.16.2",
     "tailwindcss": "^4",
     "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.8",
