--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
@@ -33,12 +34,12 @@
     "date-fns": "^4.1.0",
     "lucia": "^3.2.2",
     "lucide-react": "^0.544.0",
-    "motion": "^12.23.13",
+    "motion": "^12.23.15",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
     "oslo": "^1.2.1",
-    "query-string": "^9.3.0",
+    "query-string": "^9.3.1",
     "react": "19.1.1",
     "react-day-picker": "^9.10.0",
     "react-dom": "19.1.1",
@@ -48,7 +49,7 @@
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.6",
     "use-scramble": "^2.2.15",
-    "zod": "^4.1.8"
+    "zod": "^4.1.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
