--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@node-rs/argon2": "^2.0.2",
-    "@prisma/client": "^6.16.2",
+    "@prisma/client": "^6.17.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -33,23 +33,24 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucia": "^3.2.2",
-    "lucide-react": "^0.544.0",
-    "motion": "^12.23.15",
-    "next": "15.5.3",
+    "lucide-react": "^0.545.0",
+    "motion": "^12.23.24",
+    "next": "15.5.4",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
+    "nuqs": "^2.7.1",
     "oslo": "^1.2.1",
     "query-string": "^9.3.1",
-    "react": "19.1.1",
-    "react-day-picker": "^9.10.0",
-    "react-dom": "19.1.1",
+    "react": "19.2.0",
+    "react-day-picker": "^9.11.1",
+    "react-dom": "19.2.0",
     "react-error-boundary": "^6.0.0",
     "react-use-measure": "^2.1.7",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.6",
     "use-scramble": "^2.2.15",
-    "zod": "^4.1.9"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -59,15 +60,15 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3",
+    "eslint-config-next": "15.5.4",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.2.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "prisma": "^6.16.2",
+    "prisma": "^6.17.1",
     "tailwindcss": "^4",
-    "tsx": "^4.20.5",
-    "tw-animate-css": "^1.3.8",
+    "tsx": "^4.20.6",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
