--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@types/p5": "^1.7.6",
     "big.js": "^7.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -40,6 +41,7 @@
     "nextjs-toploader": "^3.9.17",
     "nuqs": "^2.7.1",
     "oslo": "^1.2.1",
+    "p5": "^2.0.5",
     "query-string": "^9.3.1",
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
@@ -48,6 +50,7 @@
     "react-use-measure": "^2.1.7",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.180.0",
     "use-debounce": "^10.0.6",
     "use-scramble": "^2.2.15",
     "zod": "^4.1.12"
@@ -59,6 +62,7 @@
     "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.180.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "eslint-plugin-simple-import-sort": "^12.1.1",
