--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@node-rs/argon2": "^2.0.2",
     "@prisma/client": "^6.17.1",
@@ -48,6 +49,7 @@
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
     "react-error-boundary": "^6.0.0",
+    "react-hook-form": "^7.65.0",
     "react-use-measure": "^2.1.7",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
