--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tanstack/react-query": "^5.90.3",
     "@types/p5": "^1.7.6",
     "babel-plugin-react-compiler": "^1.0.0",
     "big.js": "^7.0.1",
@@ -62,6 +63,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@types/big.js": "^6.2.2",
     "@types/node": "^24",
     "@types/react": "19.2.2",
