--- a/package.json
+++ b/package.json
@@ -18,45 +18,43 @@
     "@hookform/resolvers": "^5.2.2",
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@node-rs/argon2": "^2.0.2",
-    "@prisma/client": "^6.17.1",
+    "@prisma/client": "^6.19.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
-    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@tanstack/react-query": "^5.90.3",
-    "@types/p5": "^1.7.6",
+    "@tanstack/react-query": "^5.90.8",
     "babel-plugin-react-compiler": "^1.0.0",
     "big.js": "^7.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "lucia": "^3.2.2",
-    "lucide-react": "^0.545.0",
+    "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
-    "next": "^16.0.0-beta.0",
+    "next": "^16.0.2",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
-    "nuqs": "^2.7.1",
+    "nuqs": "^2.7.3",
     "oslo": "^1.2.1",
-    "p5": "^2.0.5",
     "query-string": "^9.3.1",
     "react": "^19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.0",
     "react-error-boundary": "^6.0.0",
-    "react-hook-form": "^7.65.0",
+    "react-hook-form": "^7.66.0",
     "react-use-measure": "^2.1.7",
     "schema-dts": "^1.1.5",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1",
-    "three": "^0.180.0",
+    "tailwind-merge": "^3.4.0",
     "use-debounce": "^10.0.6",
     "use-scramble": "^2.2.15",
     "zod": "^4.1.12"
@@ -66,24 +64,24 @@
     "@tailwindcss/postcss": "^4",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@types/big.js": "^6.2.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^24",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.1",
-    "@types/three": "^0.180.0",
+    "@types/react": "19.2.4",
+    "@types/react-dom": "19.2.3",
     "eslint": "^9",
-    "eslint-config-next": "16.0.0-beta.0",
+    "eslint-config-next": "16.0.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-unused-imports": "^4.2.0",
+    "eslint-plugin-unused-imports": "^4.3.0",
     "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.14",
-    "prisma": "^6.17.1",
+    "prettier-plugin-tailwindcss": "^0.7.1",
+    "prisma": "^6.19.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   },
   "overrides": {
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.1"
+    "@types/react": "19.2.4",
+    "@types/react-dom": "19.2.3"
   }
 }
