Revert "feat: implement password reset functionality"
This reverts commit 038674ffc0f6ff0d81a2b2d3c6dbd7b7c3370be1.

--- a/.gitignore
+++ b/.gitignore
@@ -41,10 +41,7 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# prisma
-/src/generated
-
-
+/src/generated/prisma
 /X_POSTS_LOG_IMPROVED.md
 /X_POSTS_LOG.md
 /X
