--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,9 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-/src/generated/prisma
+# prisma
+/src/generated
+
 /X_POSTS_LOG_IMPROVED.md
 /X_POSTS_LOG.md
 /X
