--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-email/components": "^1.0.1",
     "@tanstack/react-query": "^5.90.8",
     "babel-plugin-react-compiler": "^1.0.0",
     "big.js": "^7.0.1",
@@ -57,7 +58,8 @@
     "tailwind-merge": "^3.4.0",
     "use-debounce": "^10.0.6",
     "use-scramble": "^2.2.15",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -68,6 +70,7 @@
     "@types/node": "^24",
     "@types/react": "19.2.4",
     "@types/react-dom": "19.2.3",
+    "@types/zxcvbn": "^4.4.5",
     "eslint": "^9",
     "eslint-config-next": "16.0.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
@@ -75,6 +78,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "prisma": "^6.19.0",
+    "react-email": "^5.0.4",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
