--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev  --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint .",
@@ -12,7 +12,8 @@
     "format:check": "prettier --check .",
     "type": "tsc --noEmit",
     "postinstall": "prisma generate",
-    "seed": "tsx prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts",
+    "email": "email dev --dir src/emails"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -31,7 +32,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "^1.0.1",
-    "@tanstack/react-query": "^5.90.8",
+    "@tanstack/react-query": "^5.90.9",
     "babel-plugin-react-compiler": "^1.0.0",
     "big.js": "^7.0.1",
     "class-variance-authority": "^0.7.1",
@@ -41,7 +42,7 @@
     "lucia": "^3.2.2",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
-    "next": "^16.0.2",
+    "next": "^16.0.3",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
     "nuqs": "^2.7.3",
@@ -53,6 +54,7 @@
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.66.0",
     "react-use-measure": "^2.1.7",
+    "resend": "^6.4.2",
     "schema-dts": "^1.1.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
@@ -63,6 +65,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@react-email/preview-server": "^5.0.4",
     "@tailwindcss/postcss": "^4",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@types/big.js": "^6.2.2",
@@ -72,7 +75,7 @@
     "@types/react-dom": "19.2.3",
     "@types/zxcvbn": "^4.4.5",
     "eslint": "^9",
-    "eslint-config-next": "16.0.2",
+    "eslint-config-next": "16.0.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.3.0",
     "prettier": "^3.6.2",
