--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
+    "inngest": "^3.45.1",
     "lucia": "^3.2.2",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
@@ -47,6 +48,7 @@
     "nextjs-toploader": "^3.9.17",
     "nuqs": "^2.7.3",
     "oslo": "^1.2.1",
+    "pino": "^10.1.0",
     "query-string": "^9.3.1",
     "react": "^19.2.0",
     "react-day-picker": "^9.11.1",
@@ -78,6 +80,7 @@
     "eslint-config-next": "16.0.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.3.0",
+    "pino-pretty": "^13.1.2",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "prisma": "^6.19.0",
