chore(deps): upgrade dependencies and prisma to v7
- Upgrade all major packages including Next.js, React, and Lucia
- Migrate Prisma from v6 to v7, updating schema and configuration files
- Refactor Prisma client imports across the codebase to use default export
- Introduce @prisma/adapter-pg for robust PostgreSQL connection handling
- Add new configuration file for Prisma setup (prisma.config.ts)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,15 @@
   "explorer.confirmDragAndDrop": false,
 
   // ═══════════════════════════════════════════════════════════
+  // 🏷️ EDITOR LABELS (Next.js)
+  // ═══════════════════════════════════════════════════════════
+  "workbench.editor.customLabels.enabled": true,
+  "workbench.editor.customLabels.patterns": {
+    "**/app/**/{page,layout,template,loading,error,not-found,route}.{tsx,ts,jsx,js}": "${dirname} | ${filename}",
+    "**/index.{tsx,ts,jsx,js}": "${dirname} | index"
+  },
+
+  // ═══════════════════════════════════════════════════════════
   // ✨ CODE FORMATTING & QUALITY
   // ═══════════════════════════════════════════════════════════
 
@@ -170,6 +179,16 @@
     "!yml",
     "mdx"
   ],
+
+  // ═══════════════════════════════════════════════════════════
+  // 💻 TERMINAL
+  // ═══════════════════════════════════════════════════════════
+
+  // Auto-relaunch terminal when extensions need to modify environment
+  // "terminal.integrated.environmentChangesRelaunch": "on",
+
+  // Disable git terminal authentication if auto-relaunch doesn't work
+  // "git.terminalAuthentication": false,
 
   // ═══════════════════════════════════════════════════════════
   // 📦 VERSION CONTROL
