--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "type": "tsc --noEmit",
     "postinstall": "prisma generate",
     "seed": "tsx prisma/seed.ts",
-    "email": "email dev --dir src/emails"
+    "email": "email dev --dir src/emails",
+    "commit": "tsx scripts/ai-commit.ts"
   },
   "dependencies": {
+    "@ai-sdk/openai-compatible": "^1.0.29",
     "@hookform/resolvers": "^5.2.2",
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@node-rs/argon2": "^2.0.2",
-    "@prisma/client": "^6.19.0",
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -32,66 +35,68 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "^1.0.1",
-    "@tanstack/react-query": "^5.90.9",
+    "@tanstack/react-query": "^5.90.12",
+    "ai": "^5.0.113",
     "babel-plugin-react-compiler": "^1.0.0",
     "big.js": "^7.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
-    "inngest": "^3.45.1",
+    "dotenv": "^17.2.3",
+    "inngest": "^3.47.0",
     "lucia": "^3.2.2",
-    "lucide-react": "^0.553.0",
-    "motion": "^12.23.24",
-    "next": "^16.0.3",
+    "lucide-react": "^0.561.0",
+    "motion": "^12.23.26",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
-    "nuqs": "^2.7.3",
+    "nuqs": "^2.8.5",
     "oslo": "^1.2.1",
+    "pg": "^8.16.3",
     "pino": "^10.1.0",
     "query-string": "^9.3.1",
-    "react": "^19.2.0",
+    "react": "^19.2.3",
     "react-day-picker": "^9.11.1",
-    "react-dom": "^19.2.0",
+    "react-dom": "^19.2.3",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.66.0",
     "react-use-measure": "^2.1.7",
-    "resend": "^6.4.2",
+    "resend": "^6.6.0",
     "schema-dts": "^1.1.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "use-debounce": "^10.0.6",
     "use-scramble": "^2.2.15",
-    "zod": "^4.1.12",
+    "zod": "^4.2.0",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@react-email/preview-server": "^5.0.4",
+    "@react-email/preview-server": "^5.0.7",
     "@tailwindcss/postcss": "^4",
-    "@tanstack/react-query-devtools": "^5.90.2",
+    "@tanstack/react-query-devtools": "^5.91.1",
     "@types/big.js": "^6.2.2",
     "@types/crypto-js": "^4.2.2",
-    "@types/node": "^24",
-    "@types/react": "19.2.4",
+    "@types/node": "^25",
+    "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "@types/zxcvbn": "^4.4.5",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "16.0.10",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.3.0",
-    "pino-pretty": "^13.1.2",
-    "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.7.1",
-    "prisma": "^6.19.0",
-    "react-email": "^5.0.4",
+    "pino-pretty": "^13.1.3",
+    "prettier": "^3.7.4",
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "prisma": "^7.1.0",
+    "react-email": "^5.0.8",
     "tailwindcss": "^4",
-    "tsx": "^4.20.6",
+    "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   },
   "overrides": {
-    "@types/react": "19.2.4",
-    "@types/react-dom": "19.2.3"
+    "next": "$next"
   }
 }
