--- a/package.json
+++ b/package.json
@@ -45,8 +45,9 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "inngest": "^3.48.0",
+    "input-otp": "^1.4.2",
     "lucia": "^3.2.2",
-    "lucide-react": "^0.561.0",
+    "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
     "next": "^16.0.10",
     "next-themes": "^0.4.6",
