--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev  --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
@@ -34,7 +34,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@react-email/components": "^1.0.1",
+    "@react-email/components": "^1.0.2",
     "@tanstack/react-query": "^5.90.12",
     "ai": "^5.0.115",
     "babel-plugin-react-compiler": "^1.0.0",
@@ -56,6 +56,8 @@
     "oslo": "^1.2.1",
     "pg": "^8.16.3",
     "pino": "^10.1.0",
+    "posthog-js": "^1.309.1",
+    "posthog-node": "^5.17.4",
     "query-string": "^9.3.1",
     "react": "^19.2.3",
     "react-day-picker": "^9.11.1",
@@ -74,7 +76,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@react-email/preview-server": "^5.0.8",
+    "@react-email/preview-server": "^5.1.0",
     "@tailwindcss/postcss": "^4",
     "@tanstack/react-query-devtools": "^5.91.1",
     "@types/big.js": "^6.2.2",
@@ -84,20 +86,17 @@
     "@types/react-dom": "19.2.3",
     "@types/zxcvbn": "^4.4.5",
     "eslint": "^9",
-    "eslint-config-next": "16.0.10",
+    "eslint-config-next": "^16.0.10",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.3.0",
     "pino-pretty": "^13.1.3",
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "prisma": "^7.2.0",
-    "react-email": "^5.0.8",
+    "react-email": "^5.1.0",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
-  },
-  "overrides": {
-    "next": "$next"
   }
 }
