feat(db): initialize organization and membership schema
- Add Organization and Membership models to support multi-tenancy
- Set up PostgreSQL container via Docker Compose for local development
- Add db:push, db:seed, and db:studio scripts to package.json
- Update seed logic to handle organization and membership creation
- Generate initial migration for development environment
- Configure .cursorignore to ensure .env.example is indexed

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "format:check": "prettier --check .",
     "type": "tsc --noEmit",
     "postinstall": "prisma generate",
+    "db:push": "prisma db push",
+    "db:seed": "tsx prisma/seed.ts",
+    "db:studio": "prisma studio",
     "seed": "tsx prisma/seed.ts",
     "email": "email dev --dir src/emails",
     "commit": "tsx scripts/ai-commit.ts"
