feat(organizations): add create and list pages
- Add create organization page with form and redirect support
- Implement organizations list using new table UI component
- Add query to fetch organizations by current user id
- Update deps and config for Tailwind, Prettier, and VSCode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -207,7 +207,16 @@
 
   // Git and GitLens settings
   "git.openRepositoryInParentFolders": "never",
-  "gitlens.advanced.messages": {
-    "suppressCommitHasNoPreviousCommitWarning": true
-  }
+
+  // ═══════════════════════════════════════════════════════════
+  // 💅 TAILWIND CSS
+  // ═══════════════════════════════════════════════════════════
+  "tailwindCSS.classAttributes": [
+    "class",
+    "className",
+    "ngClass",
+    "classList",
+    ".*ClassName",
+    ".*Class"
+  ]
 }
