--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "^1.0.4",
     "@tanstack/react-query": "^5.90.17",
-    "ai": "^6.0.34",
+    "ai": "^6.0.35",
     "babel-plugin-react-compiler": "^1.0.0",
     "big.js": "^7.0.1",
     "class-variance-authority": "^0.7.1",
@@ -51,12 +51,12 @@
     "lucia": "^3.2.2",
     "lucide-react": "^0.562.0",
     "motion": "^12.26.2",
-    "next": "^16.1.1",
+    "next": "^16.1.2",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
     "nuqs": "^2.8.6",
     "oslo": "^1.2.1",
-    "pg": "^8.17.0",
+    "pg": "^8.17.1",
     "pino": "^10.2.0",
     "posthog-js": "^1.321.2",
     "posthog-node": "^5.21.0",
@@ -76,6 +76,9 @@
     "zod": "^4.3.5",
     "zxcvbn": "^4.4.2"
   },
+  "overrides": {
+    "hono": "^4.11.4"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@react-email/preview-server": "^5.2.5",
@@ -88,13 +91,13 @@
     "@types/react-dom": "19.2.3",
     "@types/zxcvbn": "^4.4.5",
     "eslint": "^9",
-    "eslint-config-next": "^16.1.1",
+    "eslint-config-next": "^16.1.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.3.0",
     "pino-pretty": "^13.1.3",
-    "prettier": "^3.7.4",
+    "prettier": "^3.8.0",
     "prettier-plugin-tailwindcss": "^0.7.2",
-    "prisma": "^6.19.2",
+    "prisma": "^7.2.0",
     "react-email": "^5.2.5",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
