--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.3.0",
     "pino-pretty": "^13.1.3",
-    "prettier": "^3.8.0",
+    "prettier": "3.8.0",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "prisma": "^7.2.0",
     "react-email": "^5.2.5",
