feat(organizations): add delete organization functionality
- implement deleteUserOrganization action with membership cleanup
- add OrganizationDeleteButton and OrganizationRow components
- create DeletingUserOrganizationContext for delete loading states
- update OrganizationsList to use row rendering and provider
- adjust VSCode settings for context file organization

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,8 @@
     "**/components/**/*.{tsx,ts,jsx,js}": "${dirname} | ${filename}",
     "**/lib/hooks/*.{tsx,ts,jsx,js}": "${dirname} | ${filename}",
     "**/emails/**/*.{tsx,ts,jsx,js}": "📧 ${dirname} | ${filename}",
-    "**/features/**/{schema,types,type,constants}.{tsx,ts,jsx,js}": "${dirname} | ${filename}"
+    "**/features/**/{schema,types,type,constants}.{tsx,ts,jsx,js}": "${dirname} | ${filename}",
+    "**/features/**/contexts/*.{tsx,ts,jsx,js}": "${dirname} | ${filename}"
   },
 
   // ═══════════════════════════════════════════════════════════
