--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "db:push": "prisma db push && prisma generate",
     "db:seed": "tsx prisma/seed.ts",
     "db:studio": "prisma studio",
+    "db:generate": "prisma generate",
     "email": "email dev --dir src/emails",
     "commit": "tsx scripts/ai-commit.ts"
   },
@@ -49,7 +50,7 @@
     "inngest": "^3.52.0",
     "input-otp": "^1.4.2",
     "lucia": "^3.2.2",
-    "lucide-react": "^0.563.0",
+    "lucide-react": "^0.564.0",
     "motion": "^12.34.0",
     "next": "^16.1.6",
     "next-themes": "^0.4.6",
@@ -58,9 +59,10 @@
     "oslo": "^1.2.1",
     "pg": "^8.18.0",
     "pino": "^10.3.1",
-    "posthog-js": "^1.347.1",
+    "posthog-js": "^1.347.2",
     "posthog-node": "^5.24.15",
     "query-string": "^9.3.1",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.4",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.4",
