--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "^1.0.7",
     "@tanstack/react-query": "^5.90.21",
-    "ai": "^6.0.86",
+    "@vercel/speed-insights": "^1.3.1",
+    "ai": "^6.0.89",
     "babel-plugin-react-compiler": "^1.0.0",
     "big.js": "^7.0.1",
     "class-variance-authority": "^0.7.1",
@@ -50,8 +51,8 @@
     "inngest": "^3.52.0",
     "input-otp": "^1.4.2",
     "lucia": "^3.2.2",
-    "lucide-react": "^0.564.0",
-    "motion": "^12.34.0",
+    "lucide-react": "^0.574.0",
+    "motion": "^12.34.1",
     "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
@@ -59,8 +60,8 @@
     "oslo": "^1.2.1",
     "pg": "^8.18.0",
     "pino": "^10.3.1",
-    "posthog-js": "^1.347.2",
-    "posthog-node": "^5.24.15",
+    "posthog-js": "^1.350.0",
+    "posthog-node": "^5.24.16",
     "query-string": "^9.3.1",
     "radix-ui": "^1.4.3",
     "react": "^19.2.4",
