--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,10 +40,9 @@
 
   // Auto-fix and import management on save
   "editor.codeActionsOnSave": {
-    "source.fixAll": "explicit",
     "source.fixAll.eslint": "explicit",
-    "source.fixAll.tslint": "explicit",
-    "source.addMissingImports": "explicit"
+    "source.addMissingImports": "explicit",
+    "source.organizeImports": "never"
   },
 
   // Language-specific formatting rules
