--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma migrate deploy && prisma generate && next build",
     "start": "next start",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
@@ -12,6 +12,7 @@
     "format:check": "prettier --check .",
     "type": "tsc --noEmit",
     "postinstall": "prisma generate",
+    "db:migrate": "prisma migrate dev && prisma generate",
     "db:push": "prisma db push && prisma generate",
     "db:seed": "tsx prisma/seed.ts",
     "db:studio": "prisma studio",
@@ -37,10 +38,10 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@react-email/components": "^1.0.7",
+    "@react-email/components": "^1.0.8",
     "@tanstack/react-query": "^5.90.21",
     "@vercel/speed-insights": "^1.3.1",
-    "ai": "^6.0.89",
+    "ai": "^6.0.91",
     "babel-plugin-react-compiler": "^1.0.0",
     "big.js": "^7.0.1",
     "class-variance-authority": "^0.7.1",
@@ -48,11 +49,11 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.3.1",
-    "inngest": "^3.52.0",
+    "inngest": "^3.52.1",
     "input-otp": "^1.4.2",
     "lucia": "^3.2.2",
     "lucide-react": "^0.574.0",
-    "motion": "^12.34.1",
+    "motion": "^12.34.2",
     "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
@@ -60,8 +61,8 @@
     "oslo": "^1.2.1",
     "pg": "^8.18.0",
     "pino": "^10.3.1",
-    "posthog-js": "^1.350.0",
-    "posthog-node": "^5.24.16",
+    "posthog-js": "^1.351.1",
+    "posthog-node": "^5.24.17",
     "query-string": "^9.3.1",
     "radix-ui": "^1.4.3",
     "react": "^19.2.4",
